--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/shermam/pdm-to-json#readme",
   "dependencies": {
     "@iarna/rtf-to-html": "^1.0.3",
+    "typescript": "^3.4.4",
     "xml2js": "^0.4.19"
   }
 }
