--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   "homepage": "https://github.com/shermam/pdm-to-json#readme",
   "dependencies": {
     "@iarna/rtf-to-html": "^1.0.3",
+    "fs-extra": "^7.0.1",
     "typescript": "^3.4.4",
     "xml2js": "^0.4.19"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^5.0.5"
   }
 }
